--- a/dsi-eb-commons/pom.xml
+++ b/dsi-eb-commons/pom.xml
@@ -19,5 +19,9 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+		</dependency>
 	</dependencies>
 </project>
