--- a/dsi-eb-services/pom.xml
+++ b/dsi-eb-services/pom.xml
@@ -19,5 +19,15 @@
 			<artifactId>spring-context</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.dsi.eb</groupId>
+			<artifactId>dsi-eb-commons</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.dsi.eb</groupId>
+			<artifactId>dsi-eb-persistence</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
