--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
 				<artifactId>commons-lang3</artifactId>
 				<version>3.10</version>
 			</dependency>
+			<dependency>
+				<groupId>org.mariadb.jdbc</groupId>
+				<artifactId>mariadb-java-client</artifactId>
+				<version>2.6.0</version>
+			</dependency>
+			<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+			<dependency>
+				<groupId>javax</groupId>
+				<artifactId>javaee-api</artifactId>
+				<version>8.0.1</version>
+			</dependency>
+
 		</dependencies>
 	</dependencyManagement>
 
@@ -69,12 +81,10 @@
 		</plugins>
 	</build>
 
-
 	<modules>
 		<module>dsi-eb-services</module>
 		<module>dsi-eb-rest</module>
-		<module>dsi-eb-persistense</module>
+		<module>dsi-eb-persistence</module>
 		<module>dsi-eb-commons</module>
-		<module>dsi-eb-model</module>
 	</modules>
 </project>
